# numerical-gradient-flows

./: .gitignore  README.md  animate.py  flow_eps_1e-2_tau_1e-1.html  jko_hpo.sh  jko_hpo_optuna.py  jko_test.ipynb  kl_div.py  pyproject.toml  run_hp.sbatch  run_pipeline.sh  sinkhorn.py  sinkhorn_jko_demo.ipynb  sinkhorn_jko_test.ipynb  test.md  wgf.ipynb
hyperparam/: heat_eq.py
src/jko_lab/: __init__.py  lambert.py  pdhg_jko.py  sinkhorn_jko.py
src/utils/: __init__.py  plots.py
