[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jko_lab"
version = "0.1.0"
description = "JKO flows and OT solvers (PDHG-based and Sinkhorn-based)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name="Your Name", email="you@example.com" }]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "jax>=0.4.20",
  "jaxlib>=0.4.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
  "mypy>=1.5",
  "ipykernel>=6.29",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]